# Gunna

./: example.gn  example.tex  gunna.gn  gunna.py  gunna.tex
process/: interpreter.py  parser.py  tokens.py
utils/: checks.py  terminal.py
